# howto-rust-ethers

./: Cargo.toml  README.md  build.rs  erc20_abi.json
src/: erc20.rs  error.rs  main.rs  main_alloy.rs  setting.rs
