[package]
name = "web3action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
anyhow = "1.0.81"
log = { version = "0.4.21", features = ["release_max_level_info"] }
env_logger = "0.11.3"
dotenvy = "0.15.7"
once_cell = "1.19.0"
chrono = { version = "0.4.35", default-features = false, features = ["clock","serde"] }
tokio = { version = "1.36.0", features = ["full"] }
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "legacy"]}

[build-dependencies]
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "legacy"]}

[profile.release]
lto = true
strip = true
codegen-units = 1
