[package]
name = "web3action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.128"
anyhow = "1.0.88"
log = { version = "0.4.22", features = ["release_max_level_info"] }
env_logger = "0.11.5"
dotenvy = "0.15.7"
chrono = { version = "0.4.38", default-features = false, features = ["clock","serde"] }
tokio = { version = "1.40.0", features = ["full"] }
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "legacy"]}

[build-dependencies]
ethers = { version = "2.0.14", default-features = false, features = ["abigen", "legacy"]}

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
